--- a/package.json
+++ b/package.json
@@ -20,6 +20,11 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "bootstrap-css": "^4.0.0-alpha.5"
+    "bootstrap-css": "^4.0.0-alpha.5",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "jest": "20.0.4",
+    "jest-enzyme": "^6.0.1",
+    "react-test-renderer": "^16.4.0"
   }
 }
