--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "enzyme-adapter-react-16": "^1.1.1",
     "jest": "20.0.4",
     "jest-enzyme": "^6.0.1",
+    "node-emoji": "^1.8.1",
     "react-test-renderer": "^16.4.0"
   }
 }
