--- a/package.json
+++ b/package.json
@@ -26,6 +26,6 @@
     "jest": "20.0.4",
     "jest-enzyme": "^6.0.1",
     "node-emoji": "^1.8.1",
-    "react-test-renderer": "^16.4.0"
+    "react-test-renderer": "^16.4.0",
   }
 }
