--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "enzyme-adapter-react-16": "^1.1.1",
     "jest": "20.0.4",
     "jest-enzyme": "^6.0.1",
-    "react-test-renderer": "^16.4.0"
+    "react-test-renderer": "^16.4.0",
+    "redux-saga-testing": "^1.0.5"
   }
 }
